Fix command-line arguments